# -11-1

C#/Attestat/: Program.cs  README.md  Startup.cs
C#/Attestat/Controllers/: EmployeesController.cs  HomeController.cs
C#/Attestat/Employees/: Details.cshtml  Index.cshtml
C#/CW/: DateDetailsActivity.cs  DimaApp.csproj  DimaApp.sln  MainActivity.cs
C#/CW/App/: DimaApp.sln
C#/LAB1/: Program.cs  Readme.txt  С#.LAB1.Fractions.csproj
C#/LAB2/: Bank.cs  Company.cs  Readme.md  automated_ATM.cs
C#/LAB3/: README.md  people.cs
C#/LINQ1/: Program.cs  README.md
C#/LINQ2/: Program.cs  README.md
C++Basics/LAB1/BubbleSort/: BubbleSort.cpp  Readme.txt
C++Basics/LAB1/CountingSort/: Readme.txt
C++Basics/LAB1/InsertionSort/: InsertionSort.cpp  Readme.txt
C++Basics/LAB1/RadixSort/: RadixSort.cpp  Readme.txt
C++Basics/LAB1/SelectionSort/: Readme.txt  SelectionSort.cpp
C++Basics/LeetCode#1/: README.md
C++Basics/LeetCode#2/: README.md
C++Basics/LeetCode#3/: README.md
C++Basics/LeetCode#4/: README.md
C++Basics/LeetCode#5/: README.md
C++Basics/LeetCode#6/: README.md
C++Basics/Leetcode#7/: README.md
C++Basics/Preparing_C++/: 6.md  README.md
DoPM/LAB1/: API_Weather.cpp  CMakeLists.txt  main.cpp
DoPM/LAB2/: CMakeLists.txt  main.cpp
OOP/LAB1/Fraction/: Fraction.cpp  Fraction.h  README.md  main.cpp
OOP/LAB1/GeometricFigure/: GeometricFigure.cpp  README.md  (+2 more)
OOP/LAB2/: README.md  editor.cpp
OOP/LAB3/: CMakeLists.txt  README.md  any.cpp  any.h
UML/LAB1/: README.md  class.puml  sequence.puml  use_case.puml
UML/LAB2/: Банкомат.puml  Квадратные уравнения.puml
UML/TEST/: README.md  TEST.txt  activity.puml  class.puml  market.puml  market_class.puml  sequence  use_case
(+37 files in other folders)
